packages/typ/tests/fixtures/diagnostics/0181_adt_record_field_int_bool_06.ml.infer.expected
File "0181_adt_record_field_int_bool_06.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0181_adt_record_field_int_bool_06 is not a valid module name.

File "0181_adt_record_field_int_bool_06.ml", line 2, characters 27-31:
2 | let _ : rec_zeta = { age = true; ready = false }
                               ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
