packages/typ/tests/fixtures/diagnostics/0181_adt_record_field_int_bool_06.ml
type rec_zeta = { age : int; ready : bool }
let _ : rec_zeta = { age = true; ready = false }
